@@ -1,6 +1,7 @@
 plugins {
     kotlin("jvm")
     application
+    id("cloud")
 }
 
 group = "com.storyteller_f.a.cloud"
@@ -27,27 +28,4 @@ kotlin {
 application {
     mainClass = "com.storyteller_f.a.cloud.worker.MainKt"
     applicationDefaultJvmArgs = listOf("--add-modules", "jdk.incubator.vector")
-}
-
-
-tasks.withType<JavaExec> {
-    jvmArgs = listOf("--add-modules", "jdk.incubator.vector")
-}
-
-fun AbstractCopyTask.handleDupJar() {
-    filesMatching("vavi-commons-1.1.10.jar") {
-        duplicatesStrategy = DuplicatesStrategy.EXCLUDE // 排除重复项
-    }
-}
-
-tasks.withType<Tar> {
-    handleDupJar()
-}
-
-tasks.withType<Zip> {
-    handleDupJar()
-}
-
-tasks.withType<Sync> {
-    handleDupJar()
 }
